<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pop_bg"
    tools:context=".PopActivityFilter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/finishTV"
            style="@style/MainTextPopUp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="Spersonalizuj Listę" />

        <!--Poprawić ten tekst -->
        <TextView
            style="@style/SecondTextPopUp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="Poniższe elementy pozwolą Ci dopasować listę do swoich własnych potrzeb, by móc być na bieżaco z czymkolwiek chcesz" />

        <Switch
            android:id="@+id/finishSW"
            style="@style/SwitchControls"
            android:layout_height="wrap_content"
            android:layout_width="160dp"
            android:text="Ukończone" />

        <Switch
            android:id="@+id/unfinishSW"
            android:layout_height="wrap_content"
            style="@style/SwitchControls"
            android:layout_width="160dp"
            android:text="Nieukończonone" />


        <TextView
            android:id="@+id/textView3"
            style="@style/InsideText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/kategorie"
            android:textColor="@color/pureDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="50dp">

                <CheckBox
                    android:id="@+id/filmsCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Filmy"
                    android:checked="true"
                    style="@style/MainDesignControls" />

                <CheckBox
                    android:id="@+id/seriesCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Seriale"
                    android:checked="true"
                    style="@style/MainDesignControls" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="50dp"
                android:paddingEnd="20dp">

                <CheckBox
                    android:id="@+id/booksCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/MainDesignControls"
                    android:checked="true"
                    android:text="@string/ksiazki" />

                <CheckBox
                    android:id="@+id/gamesCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/MainDesignControls"
                    android:checked="true"
                    android:text="@string/gry" />
            </LinearLayout>
        </LinearLayout>

        <CheckBox
            android:id="@+id/allCB"
            style="@style/SwitchControls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/zaznacz_wszystko" />

        <TextView
            android:id="@+id/textView5"
            style="@style/InsideText"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/polecane"
            android:textColor="@color/pureDark" />

        <Switch
            android:id="@+id/rockSW"
            style="@style/SwitchControls"
            android:layout_height="wrap_content"
            android:layout_width="160dp"
            android:checked="true"
            android:text="@string/rock" />

        <Switch
            android:id="@+id/borysSW"
            style="@style/SwitchControls"
            android:layout_height="wrap_content"
            android:layout_width="160dp"
            android:checked="true"
            android:text="@string/borys" />

        <Switch
            android:id="@+id/rockBorysSW"
            style="@style/SwitchControls"
            android:layout_height="wrap_content"
            android:layout_width="160dp"
            android:checked="true"
            android:text="@string/rck_brs" />

        <Switch
            android:id="@+id/otherSW"
            style="@style/SwitchControls"
            android:layout_height="wrap_content"
            android:layout_width="160dp"
            android:checked="true"
            android:text="@string/inne" />

        <Switch
            android:id="@+id/allSW"
            style="@style/SwitchControls"
            android:layout_height="wrap_content"
            android:layout_width="160dp"
            android:checked="true"
            android:text="@string/zaznacz_wszystko"

            />

        <Button
            android:id="@+id/saveFilterButton"
            android:layout_width="195dp"
            android:layout_height="45dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/defaultFilterButton"
            android:layout_width="152dp"
            android:layout_height="34dp"
            android:text="@string/domy_lne" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>